--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-pandas
-numpy
-lightgbm
-scikit-learn
-joblib
-optuna
-streamlit
-plotly
-requests
-seaborn
-matplotlib
+pandas>=2.0.0
+numpy>=1.24.0
+lightgbm>=4.1.0
+scikit-learn>=1.3.0
+joblib>=1.3.0
+optuna>=3.3.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+matplotlib>=3.7.0
