--- a/fly.toml
+++ b/fly.toml
@@ -2,22 +2,20 @@ app = "kraken-trading-bot"
 primary_region = "ams"  # Amsterdam region, change if needed
 
 [build]
-  dockerfile = "Dockerfile"
+  builder = "paketobuildpacks/builder:base"
 
 [env]
-  PYTHONUNBUFFERED = "1"
+  PORT = "8080"
 
-[[services]]
-  protocol = "tcp"
+[http_service]
   internal_port = 8080
-  auto_stop_machines = false
+  force_https = true
+  auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 0
+  processes = ["app"]
 
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-
-[mounts]
-  source="kraken_bot_data"
-  destination="/app/data" 
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 1024 
