--- a/fly.toml
+++ b/fly.toml
@@ -1,21 +1,33 @@
 app = "kraken-trading-bot"
-primary_region = "ams"  # Amsterdam region, change if needed
+primary_region = "ams"
 
 [build]
   builder = "paketobuildpacks/builder:base"
 
 [env]
   PORT = "8080"
+  FLASK_APP = "web_app.py"
 
-[http_service]
+[[services]]
+  protocol = "tcp"
   internal_port = 8080
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
   processes = ["app"]
 
-[[vm]]
-  cpu_kind = "shared"
-  cpus = 1
-  memory_mb = 1024 
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
+
+  [services.concurrency]
+    type = "connections"
+    hard_limit = 25
+    soft_limit = 20
+
+  [[services.tcp_checks]]
+    interval = "15s"
+    timeout = "2s"
+    grace_period = "1s" 
