--- a/fly.toml
+++ b/fly.toml
@@ -1,33 +1,15 @@
 app = "kraken-trading-bot"
-primary_region = "ams"
 
 [build]
   builder = "paketobuildpacks/builder:base"
 
 [env]
-  PORT = "8080"
   FLASK_APP = "web_app.py"
 
-[[services]]
-  protocol = "tcp"
+[http_service]
   internal_port = 8080
-  processes = ["app"]
-
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
-
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
-
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "1s" 
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ["app"] 
