--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+lightgbm==4.1.0
+optuna==3.3.0
+python-dotenv==1.0.0
+requests==2.31.0
+matplotlib==3.7.2
+joblib==1.3.2
 flask==3.0.0
 gunicorn==21.2.0
+streamlit==1.29.0
